--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pyyaml>=6.0.2",
+    "tree-sitter>=0.24.0",
+    "tree-sitter-python>=0.23.6",
 ]
 
 [tool.setuptools.packages.find]
