--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,18 @@ classifiers = [
 
 # Core dependencies - always required
 dependencies = [
+    "click>=8.2.1",
+    "colorama>=0.4.6",
+    "gitpython>=3.1.44",
     "networkx>=3.5",
     "numpy>=2.3.1",
     "pyyaml>=6.0.2",
+    "requests>=2.32.4",
+    "rich>=14.0.0",
     "scipy>=1.16.0",
+    "tqdm>=4.67.1",
     "tree-sitter>=0.24.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.optional-dependencies]
