--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "tree-sitter>=0.24.8",
     "watchdog>=6.0.0",
+    "tree-sitter-language-pack>=0.9.0",
 ]
 
 [project.optional-dependencies]
